dockerize application
